--- a/styles/components/Sidebar.module.css
+++ b/styles/components/Sidebar.module.css
@@ -10,7 +10,7 @@
   top: 0px;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.25);
+  background: rgba(0, 0, 0, 0.25); 
 }
 
 .Links {
@@ -25,7 +25,7 @@
   text-align: right;
   padding: 16px;
   cursor: default;
-
+  z-index: 99;
   box-sizing: border-box;
 }
 .Links > li {
@@ -47,7 +47,7 @@
 }
 
 
-@media screen and (width < 600px) {
+@media screen and (width < 751px) {
   .SideBar {
     display: block;
   }
