--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,10 +20,5 @@ html,body, #__next {
   padding: 0px;
   font-size: 16px;
   box-sizing: border-box;
-  
-}
-
-body {
-  overflow: hidden;
-
+  /* overflow: scroll; */ 
 }
